syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting{
string first_name = 1;
string last_name =2 ;
}

//Unary Request
message GreetRequest {
Greeting greeting = 1;
}

//Unary Response
message GreetResponse{
string result = 1;
}

//BiDirectional Request
message GreetEveryoneRequest {
Greeting greeting = 1;
}

//BiDirectional Response
message GreetEveryoneResponse{
string result = 1;
}



service GreetService{
//unary
rpc Greet(GreetRequest) returns (GreetResponse){};

//Bi-Directional Streaming
rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){};
}